--- a/css/master.css
+++ b/css/master.css
@@ -9,14 +9,18 @@ body {
   background-color: darkseagreen;
   font-family: 'Abel', sans-serif;
 }
-.navbar {
-  background-color: #e8e8e8;
-  height: 15vh;
+
+.wrapper {
   width: 90%;
   margin: 3vh 5%;
 }
+/* NAVBAR */
+.navbar {
+  background-color: #e8e8e8;
+  height: 15vh;
+}
 
-h1 {
+.navbar h1 {
   background-color: white;
   margin: 0;
   text-align: center;
@@ -28,6 +32,7 @@ h1 {
 }
 ul {
   list-style: none;
+  margin-top: .5vh;
 }
 a {
   color: black;
@@ -36,15 +41,27 @@ a {
 a:hover {
   text-decoration: underline;
 }
-.big {
-  background-color: darkkhaki;
-  height: 30vh;
-  width: 90%;
-  margin: 3vh 5%;
+
+/* ADDRESS BOX */
+.textbox {
 }
+.textbox h1 {
+  float: left;
+  font-size: 2em;
+}
+.textbox h4 {
+  float: left;
+}
+
+/* COLUMNS */
+.big {
+}
+.big img {
+  width: 100%;
+}
+
 .small {
   background-color: olivedrab;
   height: 30vh;
-  width: 90%;
-  margin: 3vh 5%;
+  margin: 3vh 0;
 }
