--- a/css/master.css
+++ b/css/master.css
@@ -51,10 +51,15 @@ a:hover {
   font-size: 1.3em;
 }
 
-
 /* COLUMNS */
 .big {
+  background-color: white;
+  margin-top: 70px;
+  margin-bottom: 20vh;
+  height: 50vh;
+  text-align: center;
 }
+
 .big img {
   width: 100%;
   height: 40vh;
