--- a/css/master.css
+++ b/css/master.css
@@ -6,8 +6,9 @@
 body {
   width: 100%;
   height: 100vh;
-  background-color: #e1e7cf;
-  font-family: 'Abel', sans-serif;
+  background-color: black;
+  font-family: 'Josefin Slab', serif;
+  font-weight: lighter;
 }
 
 .wrapper {
@@ -16,23 +17,23 @@ body {
 }
 /* NAVBAR */
 .navbar {
-  background-color: #d4d4d4;
+  background-color: #e8e8e8;
   height: 15vh;
 }
-
 .navbar h1 {
   background-color: white;
   margin: 0;
-  text-align: center;
+  padding: 2vh 0;
+  padding-left: 12%;
 }
 .navbar li {
   font-size: .8em;
   float: left;
-  padding: 2vh 2%;
-}
-ul {
+  padding: 1vh 2%;
   list-style: none;
-  margin-top: .5vh;
+}
+.navbar li:first-child {
+  margin-left: -10px;
 }
 a {
   color: black;
@@ -44,6 +45,7 @@ a:hover {
 
 /* ADDRESS BOX */
 .textbox {
+  color: white;
   float: left;
   margin: 2vh 0;
 }
@@ -52,21 +54,35 @@ a:hover {
 }
 
 /* COLUMNS */
-.big {
-  background-color: white;
-  margin-top: 70px;
-  margin-bottom: 20vh;
-  height: 50vh;
-  text-align: center;
+.column {
+  background-color: #e8e8e8;
 }
-
+.column h1, p {
+  font-size: 1em;
+  margin: 0 3%;
+}
+.big {
+  margin-top: 70px;
+  height: 47vh;
+}
+.big i {
+  padding: 5px;
+}
 .big img {
   width: 100%;
   height: 40vh;
 }
-
+.top h1 {
+  font-size: 2.5vh;
+}
+.top i {
+  padding: 5px;
+}
+.top, .small {
+  padding: 2.5vh 3%;
+  margin: 3vh 0;
+}
 .small {
-  background-color: olivedrab;
-  height: 30vh;
+  padding: 5.5%;
   margin: 3vh 0;
 }
