Finish mobile view

--- a/css/master.css
+++ b/css/master.css
@@ -55,7 +55,7 @@ a:hover {
 
 /* COLUMNS */
 .column {
-  background-color: #e8e8e8;
+  background-color: #E3E5E9;
 }
 .column h1, p {
   font-size: 1em;
