--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -1,14 +1,17 @@
 @media only screen and (min-width: 760px) {
+  body {
+    background-color: white;
+  }
   .navbar {
     position: absolute;
     top: 5vh;
     left: 7%;
     background-color: white;
-    width: 20%;
-    height: 20vh;
+    width: 23%;
+    height: 15vh;
   }
   .navbar h1 {
-    padding-left: 6.2%;
+    padding-left: 0;
   }
   .nav {
     float: left;
@@ -16,21 +19,31 @@
   ul {
     padding-left: 20px;
   }
-  li {
-    padding-right: 60px;
+  .nav li {
+    margin-right: 30px;
+    padding: 2px 0;
+  }
+  .nav li:first-child {
+    margin-left: 0;
   }
   .image {
-    margin-top: 3.5vh;
+    margin-top: 0;
+    width: 100%;
+    margin: 0;
+    height: 60vh;
   }
   .textbox {
     position: absolute;
-    top: 250px;
+    top: 335px;
+    left: 50px;
   }
   .column {
     width: 42%;
-    height: 40vh;
-    margin: 2.5vh 5%;
+    height: 35vh;
+    margin: 3.7vh 5%;
     float: left;
+    background-color: #E9893A;
+    color: white;
   }
   .feature {
     margin-right: 3%;
@@ -39,12 +52,28 @@
     margin-top: 10px;
   }
   .feature h1 {
-    margin-top: 150px;
+    margin-top: 125px;
   }
   .description {
     margin-left: 3%;
   }
   .description p {
-    margin-top: 150px;
+    margin-top: 80px;
   }
+}
+
+@media only screen and (min-width:1024px){
+  .image{
+  width: 60%;
+  height: 90vh;
+  margin: 5vh 5%;
+}
+.column{
+  width: 25%;
+  height: 42.5vh;
+  margin: 5vh 5% 5vh 0;
+}
+.feature {
+  margin: 5vh 5% 0 0%;
+}
 }
