--- a/css/master.css
+++ b/css/master.css
@@ -12,7 +12,7 @@ body {
 }
 /* NAVBAR */
 .navbar {
-  background-color: #e8e8e8;
+  background-color: white;
   height: 90px;
 }
 .navbar h1 {
@@ -43,8 +43,8 @@ a:hover {
 .textbox {
   color: white;
   float: left;
-  margin-top: 225px;
-  margin-left: 10px;
+  margin-top: 235px;
+  margin-left: 30px;
 }
 .textbox h1 {
   font-size: 1.3em;
@@ -52,7 +52,7 @@ a:hover {
 
 /* COLUMNS */
 .column {
-  background-color: #E3E5E9;
+  background-color: white;
 }
 .column h1, p {
   font-size: 1em;
@@ -68,10 +68,6 @@ a:hover {
 }
 .image i {
   padding: 5px;
-}
-.image img {
-  width: 100%;
-  height: 40vh;
 }
 .feature h1 {
   font-size: 2.5vh;
