Add new breakpoint

--- a/css/master.css
+++ b/css/master.css
@@ -43,8 +43,8 @@ a:hover {
 .textbox {
   color: white;
   float: left;
-  margin-top: 235px;
-  margin-left: 30px;
+  margin-top: 42vh;
+  margin-left: 10vw;
 }
 .textbox h1 {
   font-size: 1.3em;
