--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -71,7 +71,12 @@
   }
 }
 
-
+@media only screen and (min-width:784px) {
+  .navbar {
+    width: 20%;
+    height: 17vh;
+  }
+}
 
 
 @media only screen and (min-width:1024px){
@@ -94,17 +99,22 @@
   margin: 0;
   }
   .navbar {
-    position: absolute;
-    left: 50px;
+    margin-top: 3vh;
+    margin-left: -.5vw;
   }
   .textbox {
-    position: absolute;
-    top: 600px;
+    margin-top: 90vh;
   }
   .feature h1{
     margin-top: 33%;
   }
   .description p {
     margin-top: 27%;
+  }
+}
+
+@media only screen and (min-width: 1088px) {
+  .navbar {
+    width: 14%;
   }
 }
